--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
     "ru": "Russian",
     "WELCOME":"Welcome",
     "Login":"Login",
+    "Support":"Support",
     "Favorites":"Favorites",
     "Social Media": "Social Media",
     "Support and Help": "Support and Help",
