--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -6,6 +6,7 @@
     },
     "WELCOME": "Hoşgeldiniz",
     "Login": "Giriş",
+    "Support": "Destek",
     "Favorites": "Favoriler",
     "Social Media": "Sosyal Medya",
     "Support and Help": "Destek ve Yardım",
