--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -31,6 +31,7 @@
     "Password":"Password",
     "Password Confirm":"Password Confirm",
     "First Name":"First Name",
-    "Last Name":"Last Name"
-    
+    "Last Name":"Last Name",
+    "Submit":"Submit",
+    "Description":"Description"
 }
