--- a/src/assets/i18n/tr.json
+++ b/src/assets/i18n/tr.json
@@ -32,6 +32,8 @@
     "Password":"Parola",
     "Password Confirm":"Parola Onayla",
     "First Name":"Adınız",
-    "Last Name":"Soyadınız"
+    "Last Name":"Soyadınız",
+    "Submit":"Gönder",
+    "Description":"Açıklama"
     
   }
